files/app_cluster/route/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website-service
            port:
              number: 80

      - path: /api/books
        pathType: Prefix
        backend:
          service:
            name: shopapi-service
            port:
              number: 3000

      - path: /shop
        pathType: Prefix
        backend:
          service:
            name: shopui-service
            port:
              number: 80
